# pikpak-nautilus-plugin

./: README.md  pyproject.toml
src/pikpak_nautilus/: cli.py  dialog.py  installer.py  notify.py  plugin.py  refresh_worker.py
src/pikpak_nautilus_plugin/: __init__.py
