[project]
name = "pikpak-nautilus-plugin"
version = "0.1.0"
description = "Nautilus plugin for PikPak magnet downloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pikpak-nautilus = "pikpak_nautilus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pikpak_nautilus"]